--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heyroomie-app",
+  "name": "curso-react-native",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.4",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~47.0.12",
+    "expo-font": "^11.0.1",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "native-base": "^3.4.28",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.1.0",
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
