--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~47.0.12",
+    "expo-file-system": "^15.2.2",
     "expo-font": "^11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-location": "^15.0.1",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "native-base": "^3.4.28",
@@ -26,7 +29,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
