--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~47.0.12",
-    "expo-file-system": "^15.2.2",
+    "expo-asset": "~8.7.0",
+    "expo-file-system": "~15.1.1",
     "expo-font": "^11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "^15.0.1",
     "expo-splash-screen": "^0.17.5",
+    "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.2",
     "native-base": "^3.4.28",
     "react": "18.1.0",
