--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
-    "expo-file-system": "~15.1.1",
+    "expo-file-system": "^15.1.1",
     "expo-font": "^11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "^15.0.1",
