--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "expo-image-picker": "~14.0.2",
     "expo-location": "^15.0.1",
     "expo-splash-screen": "^0.17.5",
-    "expo-sqlite": "^11.1.1",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "native-base": "^3.4.28",
     "react": "18.1.0",
     "react-dom": "^18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
